fixed alignment bugs

--- a/src/components/Genres.css
+++ b/src/components/Genres.css
@@ -1,6 +1,6 @@
 .genres-container {
   padding: 75px 30px 20px; 
-  height: calc(220vh); 
+  height: calc(93vh); 
   width: 220px;
   margin: 0;
   font-family: 'Arial', sans-serif;
