--- a/src/views/MoviesView.css
+++ b/src/views/MoviesView.css
@@ -24,7 +24,3 @@
   border-right: 1px solid #ccc;
 }
 
-.detail-view {
-  flex: 3;
-  padding-left: 10px;
-}
